# sense-emu-x

./: .pre-commit-config.yaml  CI-LOCAL.md  DEVELOPMENT.md  INSTALL.md  MANIFEST.in  Makefile  README.md  RELEASE.md  example.py  final_test.txt  patch_setup.py  pyproject.toml  setup.cfg  test_gui.py  test_output.txt  test_result.txt  test_run_2.txt  test_summary.txt
.github/: CI.md
.github/workflows/: ci.yml  publish.yml  python-313-314.yml  python-313.yml  python-314.yml  tests.yml
sense_emu/: __init__.py  core.py  dump.py  humidity.py  i18n.py  imu.py  lock.py  playback.py  pressure.py  pyside_app.py  pyside_main.py  recfile.py  recorder.py  screen.py  stick.py  terminal.py  tui.py
tests/: conftest.py  test_RTIMU.py  test_common.py  test_core.py  test_dump.py  test_humidity.py  test_i18n.py  test_imu.py  test_lock.py  test_play.py  test_playback.py  test_pressure.py  test_pyside_app.py  test_recfile.py  test_record.py  test_recorder.py  test_screen.py  test_sense_hat.py  test_stick.py  test_terminal.py  test_tui.py
