[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sense-emu"
version = "1.2.1"
description = "The Raspberry Pi Sense HAT Emulator library"
readme = "README.rst"
license = { text = "GPL-2.0-or-later" }
authors = [
    { name = "Raspberry Pi Foundation", email = "info@raspberrypi.org" },
]
keywords = ["raspberrypi", "sense", "hat"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "Pillow",
]

[project.optional-dependencies]
gui = ["PySide6"]
tui = ["textual"]
test = [
    "pytest",
    "pytest-cov",
    "pytest-env",
    "pytest-qt",
    "mock",
    "PySide6",
]
doc = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Documentation = "https://sense-emu.readthedocs.io/"
"Source Code" = "https://github.com/astro-pi/python-sense-emu"
"Issue Tracker" = "https://github.com/astro-pi/python-sense-emu/issues"

[project.scripts]
sense_rec = "sense_emu.record:app"
sense_play = "sense_emu.play:app"
sense_csv = "sense_emu.dump:app"
sense_emu_tui = "sense_emu.tui:main"

[project.gui-scripts]
sense_emu_gui = "sense_emu.pyside_app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sense_emu*"]

[tool.setuptools.package-data]
sense_emu = [
    "*.png",
    "*.txt",
    "sense_emu_gui.svg",
    "examples/*/*.py",
    "locale/*/LC_MESSAGES/*.mo",
]
