[metadata]
name = sense-emu
version = attr: sense_emu.__version__
description = The Raspberry Pi Sense HAT Emulator library
long_description = file: README.rst
author = Raspberry Pi Foundation
author_email = info@raspberrypi.org
url = https://sense-emu.readthedocs.io/
project_urls =
    Documentation = https://sense-emu.readthedocs.io/
    Source Code = https://github.com/astro-pi/python-sense-emu
    Issue Tracker = https://github.com/astro-pi/python-sense-emu/issues
keywords = raspberrypi sense hat
license = GPL-2.0-or-later
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    numpy
    Pillow
    importlib_resources; python_version < '3.9'

[options.package_data]
sense_emu =
    *.png
    *.txt
    sense_emu_gui.svg
    examples/*/*.py
    locale/*/LC_MESSAGES/*.mo

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-env
    pytest-qt
    mock
    PySide6
doc =
    sphinx
    sphinx-rtd-theme
tui =
    textual
gui =
    PySide6


[options.entry_points]
console_scripts =
    sense_rec = sense_emu.record:app
    sense_play = sense_emu.play:app
    sense_csv = sense_emu.dump:app
    sense_emu_tui = sense_emu.tui:main
gui_scripts =
    sense_emu_gui = sense_emu.pyside_app:main
[tool:pytest]
addopts = --cov=sense_emu --cov-report=term-missing --tb=short --cov-fail-under=85
testpaths = tests
env =
    QT_QPA_PLATFORM=offscreen

[coverage:run]
source = sense_emu
branch = true
concurrency = thread

[coverage:report]
ignore_errors = true
show_missing = true
exclude_lines =
    assert False
    raise NotImplementedError
    pass
    if sys.version_info[:2] == (3, 2)
